# short_flight

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
assets/: aseprite_  test.aseprite  tilemap.ldtk  tileset.aseprite  tileset2.ase
assets/aseprite/: Geodude.aseprite  hate_sprite_flipping.aseprite  magical_leaf.aseprite  npc_index.aseprite
assets/aseprite/npcs/: Geodude.aseprite
assets/depth_maps/: tile_depth_map.ron  tile_flag_map.ron  tile_slope_map.ron
assets/map_data/: Level_0..depth.ron  Level_0..flags.ron  Level_0..slope.ron  Level_0.depth.ron  Level_0.flags.ron  Level_0.slope.ron  Level_1.depth.ron  Level_2.depth.ron  Level_2.slope.ron
assets/move_data/: MagicalLeaf.move.ron  Tackle.move.ron
assets/npc_data/: Geodude.npc.ron  Void.npc.ron
assets/npcs/: Geodude.ron
assets/projectile_data/: LeafAttack.proj.ron
assets/shaymin/: animations.anim.ron  animations.ron  shaymin.aseprite
assets/tilemap/backups/a3b53070-c210-11ef-a1a6-9323acb25b06_2025-02-02_16-01-18/: tilemap.ldtk
assets/tilemap/backups/a3b53070-c210-11ef-a1a6-9323acb25b06_2025-02-02_16-01-27/: tilemap.ldtk
assets/tilemap/backups/a3b53070-c210-11ef-a1a6-9323acb25b06_2025-02-02_16-03-34/: tilemap.ldtk
assets/tilemap/backups/a3b53070-c210-11ef-a1a6-9323acb25b06_2025-02-02_16-27-24/: tilemap.ldtk
assets/tilemap/backups/a3b53070-c210-11ef-a1a6-9323acb25b06_2025-02-07_19-56-06/: tilemap.ldtk
assets/tilemap/backups/a3b53070-c210-11ef-a1a6-9323acb25b06_2025-02-07_20-00-47/: tilemap.ldtk
assets/tilemap/backups/a3b53070-c210-11ef-a1a6-9323acb25b06_2025-02-07_21-43-41/: tilemap.ldtk
assets/tilemap/backups/a3b53070-c210-11ef-a1a6-9323acb25b06_2025-02-07_21-50-20/: tilemap.ldtk
assets/tilemap/backups/a3b53070-c210-11ef-a1a6-9323acb25b06_2025-02-16_22-16-19/: tilemap.ldtk
assets/tilemap/backups/a3b53070-c210-11ef-a1a6-9323acb25b06_2025-02-16_22-19-58/: tilemap.ldtk
assets/tilemap/backups/a3b53070-c210-11ef-a1a6-9323acb25b06_2025-02-16_22-20-06/: tilemap.ldtk
assets/tilemap/backups/a3b53070-c210-11ef-a1a6-9323acb25b06_2025-02-16_22-23-32/: tilemap.ldtk
assets/tilemap/backups/a3b53070-c210-11ef-a1a6-9323acb25b06_2025-02-19_22-38-27/: tilemap.ldtk
assets/tilemap/backups/a3b53070-c210-11ef-a1a6-9323acb25b06_2025-02-19_22-39-20/: tilemap.ldtk
assets/tilemap/backups/a3b53070-c210-11ef-a1a6-9323acb25b06_2025-02-19_22-41-18/: tilemap.ldtk
assets/tilemap/backups/a3b53070-c210-11ef-a1a6-9323acb25b06_2025-02-22_22-12-38/: tilemap.ldtk
assets/tilemap/backups/a3b53070-c210-11ef-a1a6-9323acb25b06_2025-02-22_22-12-43/: tilemap.ldtk
assets/tilemap/backups/a3b53070-c210-11ef-a1a6-9323acb25b06_2025-02-22_22-13-19/: tilemap.ldtk
assets/tilemap/backups/a3b53070-c210-11ef-a1a6-9323acb25b06_2025-02-23_09-33-46/: tilemap.ldtk
assets/tilemap/backups/a3b53070-c210-11ef-a1a6-9323acb25b06_2025-03-02_23-15-02/: tilemap.ldtk
assets/tilemap/backups/a3b53070-c210-11ef-a1a6-9323acb25b06_2025-03-02_23-15-33/: tilemap.ldtk
assets/tilemap/backups/a3b53070-c210-11ef-a1a6-9323acb25b06_2025-03-02_23-17-22/: tilemap.ldtk
assets/tilemap/backups/a3b53070-c210-11ef-a1a6-9323acb25b06_2025-03-02_23-44-19/: tilemap.ldtk
assets/tilemap/backups/a3b53070-c210-11ef-a1a6-9323acb25b06_2025-03-04_22-33-50/: tilemap.ldtk
assets/tilemap/backups/a3b53070-c210-11ef-a1a6-9323acb25b06_2025-03-26_23-35-06/: tilemap.ldtk
assets/tilemap/backups/a3b53070-c210-11ef-a1a6-9323acb25b06_2025-03-26_23-46-24/: tilemap.ldtk
assets/tilemap/backups/a3b53070-c210-11ef-a1a6-9323acb25b06_2025-03-26_23-47-28/: tilemap.ldtk
assets/tilemap/backups/a3b53070-c210-11ef-a1a6-9323acb25b06_2025-03-27_21-26-48/: tilemap.ldtk
assets/tilesets/: sky peak mountain.ase  sky peak mountain.aseprite
src/: animation.rs  assets.rs  billboard.rs  camera.rs  collision.rs  ldtk.rs  lib.rs  main.rs  mesh.rs  sprite3d.rs  test.rs  tile.rs
src/assets/: shaymin.rs
src/collision/: physics.rs
src/ldtk/: query.rs  tilemap_manager.rs
src/moves/: magical_leaf.rs  mod.rs  tackle.rs  void.rs
src/npc/: ai.rs  animation.rs  commands.rs  file.rs  mod.rs  stats.rs
src/player/: anim_state.rs  assets.rs  controller.rs  mod.rs  physics.rs
src/projectile/: leaf_attack.rs  mod.rs  void.rs
src/shaymin/: anim_state.rs  assets.rs  controller.rs  mod.rs
(+8 files in other folders)
