[package]
name = "short_flight"
version = "0.1.0"
edition = "2021"
default-run = "short_flight"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

[dependencies]
bevy = { version = "0.15.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.29.1"
bevy_ecs_tilemap = "0.15.0"
bevy_editor_cam = "0.5.0"
bevy_picking = "0.15.1"
image = "0.25.5"
ldtk_rust = "0.6.0"
log = "0.4.25"
ron = "0.8.1"
serde = "1.0.218"
serde_json = "1.0.138"
thiserror = "2.0.11"
