[package]
name = "short_flight"
version = "0.1.0"
edition = "2024"
default-run = "short_flight"

# testing
# # Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# debugging
# Enable a small amount of optimization in the dev profile.
# [profile.dev]
# opt-level = 0

# # Enable a large amount of optimization in the dev profile for dependencies.
# [profile.dev.package."*"]
# opt-level = 0

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

[dependencies]
bevy = { version = "0.16.0", features = [
    "dynamic_linking",
    "android-game-activity",
    "android_shared_stdcxx",
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "vorbis",
    "webgl2",
    "x11",
    "bevy_remote",
    "glam_assert",
    "file_watcher",
    "serialize",
    "debug_glam_assert",
], default-features = false }
bevy-inspector-egui = "0.31.0"
bevy_asset_loader = { version = "0.23.0-rc.4", features = [
    "3d",
    "standard_dynamic_assets",
] }

bevy_ecs_tilemap = "0.16.0"
# bevy_editor_cam = "0.5.0"
# bevy_sprite3d = "4.0.0" # original repo @ https://github.com/FraserLee/bevy_sprite3d, cloned and modified in sprite3d.rs
bitflags = { version = "2.9.0", features = ["serde"] }
enum-iterator = "2.1.0"
image = "0.25.5"
ldtk_rust = "0.6.0"
log = "0.4.25"
ron = "0.8.1"
serde = "1.0.218"
serde_json = "1.0.138"
thiserror = "2.0.11"
